log/build_2022-08-14_16-12-35/talker/stderr.log
  File "/home/max/temp_workspace/install/talker/lib/python3.8/site-packages/talker/main.py", line 38
    self.timer_callback
    ^
SyntaxError: invalid syntax

